[package]
name = "rust_kline_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrow-array = "56"
arrow-schema = "56"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
parquet = { version = "56", features = ["arrow"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
minio = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
time = "=0.3.36"
home = "=0.5.9"
